--- a/build.gradle
+++ b/build.gradle
@@ -3,17 +3,22 @@ import jython.JythonTask
 plugins {
     id 'java'
     id 'java-library'
+    id 'application'
     id("com.github.rzabini.gradle-jython") version "1.1.0"
 }
 
 group = 'io.github.xypercode'
-version = '1.0-SNAPSHOT'
+version = '1.0.0'
 
 repositories {
     mavenCentral()
     maven {
         url "https://jitpack.io/"
     }
+}
+
+application {
+    mainClass = "qbubbles.Launcher"
 }
 
 afterEvaluate {
