--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,8 @@
-import jython.JythonTask
-
 plugins {
     id 'java'
     id 'java-library'
     id 'application'
-    id("com.github.rzabini.gradle-jython") version "1.1.0"
+    id("org.javamodularity.moduleplugin") version "1.8.12"
 }
 
 group = 'io.github.xypercode'
@@ -22,18 +20,14 @@ application {
 }
 
 afterEvaluate {
-    tasks.register('testJython', JythonTask) {
-        script file('src/main/python/main.py')
-        classpath = sourceSets.main.compileClasspath
-        jvmArgs "-Dpython.import.site=false"
-        environment(["python.classpath": classpath.files.join(File.pathSeparator)])
-    }
+
 }
 
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
-    implementation api("org.python:jython:2.7.3")
+    implementation("org.graalvm.polyglot:polyglot:23.1.2")
+    implementation("org.graalvm.polyglot:python:23.1.2")
 
     // LibGDX
     implementation "com.badlogicgames.gdx:gdx:1.12.1"
@@ -42,6 +36,7 @@ dependencies {
     implementation "com.badlogicgames.gdx:gdx-platform:1.12.1:natives-desktop"
 
     implementation "space.earlygrey:shapedrawer:$shapedrawerVersion"
+    runtimeOnly "space.earlygrey:shapedrawer:$shapedrawerVersion"
 }
 
 test {
